--- a/app/views/devise/registrations/step1.html.haml
+++ b/app/views/devise/registrations/step1.html.haml
@@ -1,5 +1,5 @@
 .user-wrapper
-  =render "devise/shared/header-user"
+  =render "/shared/header-main"
   .user-new
     %h1.title
       %p.user-title 新規登録
