--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@ $fa-font-path:'@fortawesome/fontawesome-free/webfonts';
 @import "modules/user-new";
 @import "modules/user-confirmation";
 @import "modules/user-exist";
+@import "modules/loginForm";
 @import "modules/schedules";
 @import "modules/stocks";
 @import "modules/managements";
@@ -31,16 +32,6 @@ li{
   list-style: none;
 }
 
-.title{
-  border-bottom: solid 3px #666666;
-  margin: 0 50px 0 ;
-  padding: 5px;
-}
-
 .user-text{
   font-size: 15px;
-}
-
-.user__child-forms{
-  margin-bottom: 15px;
 }
