--- a/app/views/devise/registrations/step1.html.haml
+++ b/app/views/devise/registrations/step1.html.haml
@@ -1,8 +1,8 @@
 .user-wrapper
   =render "/shared/header-main"
-  .user-new
-    %h1.title
-      %p.user-title 新規登録
+  .userNew
+    .userNew_index
+      %h4 新規ユーザー登録
     =render "devise/shared/form-newuser"
   =render "shared/footer-main"
 
