入力内容確認画面レイアウト変更

--- a/app/assets/stylesheets/modules/_user-confirmation.scss
+++ b/app/assets/stylesheets/modules/_user-confirmation.scss
@@ -1,14 +1,11 @@
-.user-inputs{
-  width: 370px;
-  margin: 30px auto;
+.signupForm_confirmation{
+  margin-bottom: 20px;
 }
 
-.user__child-inputs{
-  margin-bottom: 15px;
-}
-
-.user__child-input{
-  font-size: 20px;
+.signupForm_confirmation-input{
   padding-left: 10px;
 }
 
+.signupForm_confirmation-text{
+  font-size: 14px;
+}
