--- a/app/views/devise/shared/_form-newcredit.html.haml
+++ b/app/views/devise/shared/_form-newcredit.html.haml
@@ -1,16 +1,16 @@
-.user__child-forms.form-group.col-md-12
+.form-group
   %label
     カード番号
-  #number.form-control.col-md-7
+  #number.form-control.col-7
   %small.text-muted
     ハイフン(-)を除く数字のみを入力してください
-.user__child-form.form-group.col-md-12
+.form-group
   %label
     有効期限
-  #exp.form-control.col-md-4
-.user__child-form.form-group.col-md-12
+  #exp.form-control.col-3
+.form-group
   %label
     CVC
-  #cvc.form-control.col-md-4
+  #cvc.form-control.col-2
   %small.text-muted
     カード裏面の3桁もしくは4桁の数字を入力してください
