--- a/app/assets/stylesheets/modules/_user-new.scss
+++ b/app/assets/stylesheets/modules/_user-new.scss
@@ -31,14 +31,20 @@
   padding-left: 15px;
 }
 
+.userNew_complete{
+  max-width: 700px;
+  margin: 30px auto;
+  padding: 20px 50px;
+  background-color: #ffffff;
+}
+
+.userNew_complete-index{
+  font-size: 20px;
+}
+
 @media(max-width:576px){
   .signupForm_input{
     border-bottom: dashed 1px #666666;
     height: 100px;
   }
-}
-
-.slash{
-  line-height: 38px;
-  margin: 0 5px;
 }
