managements_controller削除、管理者はマイページ→管理画面に変更

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -35,8 +35,12 @@
   line-height: 48px;
 }
 
+.headerMain_item-admin{
+  color: #ffffff;
+}
+
 .headerMain_item-mypage{
- color: #ffffff;
+  color: #ffffff;
 }
 
 .headerMain_item-login{
