--- a/app/views/shared/_menu-mypage.html.haml
+++ b/app/views/shared/_menu-mypage.html.haml
@@ -1,8 +1,8 @@
 .mypageMenu
   .mypageMenu__inner.list-group
-    = link_to user_path(current_user.id), class: "mypageMenu__child-inner list-group-item" do
+    = link_to user_path, class: "mypageMenu__child-inner list-group-item" do
       ユーザー情報
-    = link_to cards_path(current_user.id), class: "mypageMenu__child-inner list-group-item" do
+    = link_to card_path, class: "mypageMenu__child-inner list-group-item" do
       クレジットカード
-    = link_to logout_user_path(current_user.id), class: "mypageMenu__child-inner list-group-item" do
+    = link_to logout_user_path, class: "mypageMenu__child-inner list-group-item" do
       ログアウト
