--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -5,7 +5,7 @@
         FUN CLUB
     .headerMain_item-auth
       - if user_signed_in? && current_user.admin?
-        =link_to admins_path, class:"headerMain_item-admin" do
+        =link_to admin_path, class:"headerMain_item-admin" do
           管理画面
       - elsif user_signed_in?
         =link_to user_path, class:"headerMain_item-mypage" do
