--- a/app/assets/stylesheets/modules/_admins.scss
+++ b/app/assets/stylesheets/modules/_admins.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the admins controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.adminTop{
+  width: 980px;
+  margin: 0 auto;
+}
+
+.adminTop_menu{
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card{
+  width: 270px;
+  padding: 10px;
+}
