--- a/app/views/admin/schedules/index.html.haml
+++ b/app/views/admin/schedules/index.html.haml
@@ -2,3 +2,21 @@
   = render "shared/header-main"
   = render "shared/navbar"
   .adminSchedule
+    .adminSchedule_index
+      %h4 スケジュール
+    .adminSchedule_month
+      %h5.month
+        = l Time.current, format: :month
+      .adminSchedule_month-link
+        =link_to new_admin_schedule_path do
+          スケジュールを追加する
+      .adminSchedule_month-inner
+        - @schedules.each do |schedule|
+          .card
+            .card-body
+              .cardSchedule
+                .cardDate
+                  = l schedule.match_date, format: :day
+                .cardTime
+                  = l schedule.match_date, format: :time
+                = schedule.opponent
