スケジュール追加フォーム作成

--- a/app/assets/stylesheets/modules/admin/_schedules.scss
+++ b/app/assets/stylesheets/modules/admin/_schedules.scss
@@ -2,3 +2,14 @@
   max-width: 980px;
   margin: 0 auto;
 }
+
+.newSchedule{
+  max-width: 980px;
+  margin: 0 auto;
+}
+
+.scheduleForm{
+  width: 750px;
+  margin: 0 auto;
+  padding: 25px;
+}
