--- a/app/views/admin/schedules/new.html.haml
+++ b/app/views/admin/schedules/new.html.haml
@@ -5,7 +5,4 @@
     %h4.newSchedule_index
       スケジュール作成
     .newSchedule_inner
-    =form_with model: [:admin, @schedule], class:'scheduleForm' do |f|
-      .form-group.col-6
-        %label CSVファイルアップロード
-        = f.file_field :file, accept: '.csv', class:"form-control-file"
+      = render "form-schedule"
