--- a/app/views/admin/schedules/new.html.haml
+++ b/app/views/admin/schedules/new.html.haml
@@ -6,3 +6,6 @@
       スケジュール作成
     .newSchedule_inner
       = render "form-schedule"
+      =form_with url:import_admin_schedules_path do |f|
+        = f.file_field :file, accept: '.csv'
+        = f.submit "アップロード"
