--- a/app/views/admins/show.html.haml
+++ b/app/views/admins/show.html.haml
@@ -5,7 +5,7 @@
     .adminTop_index
       %h4 管理者メニュー
     .adminTop_menu
-      .card
+      .card.adminMenu
         %i.fas.fa-users.fa-3x
         .card-body
           %h5.card-title
@@ -13,21 +13,21 @@
           %small.card-text
             ユーザー情報の変更、削除
       =link_to admin_schedules_path do
-        .card
+        .card.adminMenu
           %i.fas.fa-calendar.fa-3x
           .card-body
             %h5.card-title
               スケジュール管理
             %small.card-text
               スケジュールの追加、変更、削除
-      .card
+      .card.adminMenu
         %i.fas.fa-warehouse.fa-3x
         .card-body
           %h5.card-title
             在庫管理
           %small.card-text
             チケット在庫の確認、設定
-      .card
+      .card.adminMenu
         %i.fas.fa-grip-horizontal.fa-3x
         .card-body
           %h5.card-title
