--- a/app/assets/stylesheets/modules/admin/_schedules.scss
+++ b/app/assets/stylesheets/modules/admin/_schedules.scss
@@ -13,3 +13,13 @@
   margin: 0 auto;
   padding: 25px;
 }
+
+.adminSchedule_month-inner{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.schedule{
+  width: 150px;
+  margin-right: 20px;
+}
