--- a/app/views/admin/schedules/index.html.haml
+++ b/app/views/admin/schedules/index.html.haml
@@ -5,22 +5,5 @@
     .adminSchedule_index
       %h4 スケジュール
     .adminSchedule_month
-      %h5.month
-        = l Time.current, format: :month
-      .adminSchedule_month-link
-        =link_to new_admin_schedule_path do
-          スケジュールを追加する
-      .adminSchedule_month-inner
-        - @schedules.each do |schedule|
-          .card.schedule
-            .card-body
-              .cardSchedule
-                .cardDate
-                  = l schedule.match_date, format: :day
-                .cardTime
-                  = l schedule.match_date, format: :time
-                .cardOpponent
-                  = schedule.opponent
-                .cardLink
-                  =link_to admin_schedule_path(schedule), class:"btn btn-secondary", method: :delete do
-                    削除
+      = month_calendar events: @schedules do |date, events|
+        = date.day
