simple_calendarの表示を日本語化&rails6対応

--- a/app/views/admin/schedules/index.html.haml
+++ b/app/views/admin/schedules/index.html.haml
@@ -5,5 +5,5 @@
     .adminSchedule_index
       %h4 スケジュール
     .adminSchedule_month
-      = month_calendar events: @schedules do |date, events|
+      = month_calendar do |date|
         = date.day
