--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,4 @@
-
-
 @import 'bootstrap/scss/bootstrap';
-
 @import "config/sanitize";
 @import "modules/funclub";
 @import "modules/match";
@@ -18,6 +15,8 @@
 @import "modules/cards";
 @import "modules/navbar";
 @import "modules/admins";
+@import "simple_calendar";
+
 
 
 a, a:hover {
