Schedule tableのカラム名変更に伴う修正

--- a/app/assets/stylesheets/modules/admin/_schedules.scss
+++ b/app/assets/stylesheets/modules/admin/_schedules.scss
@@ -14,12 +14,6 @@
   padding: 25px;
 }
 
-.adminSchedule_month-inner{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.schedule{
-  width: 150px;
-  margin-right: 20px;
+.calendar-title{
+  font-size: 20px;
 }
