--- a/app/views/admin/schedules/_form-schedule.html.haml
+++ b/app/views/admin/schedules/_form-schedule.html.haml
@@ -2,7 +2,7 @@
   .form-row
     .form-group.col-6
       %label 対戦日時
-      = f.datetime_field :match_date, class: "form-control"
+      = f.datetime_field :start_time, class: "form-control"
     .form-group.col-6
       %label 対戦相手
       = f.select :opponent,['チームA','チームB','チームC','チームD','チームE',], {prompt: '対戦相手を選んでください'}, {class:'form-control'}
