--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -2,8 +2,8 @@
   .calendar-heading
     = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view
     %span.calendar-title
+      = "#{start_date.year}年"
       = t('date.month_names')[start_date.month]
-      = start_date.year
     = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view
   %table.table.table-striped
     %thead
