スケジュールの編集更新処理

--- a/app/assets/stylesheets/modules/admin/_schedules.scss
+++ b/app/assets/stylesheets/modules/admin/_schedules.scss
@@ -8,6 +8,11 @@
   margin: 0 auto;
 }
 
+.editSchedule{
+  max-width: 980px;
+  margin: 0 auto;
+}
+
 .scheduleForm{
   width: 750px;
   margin: 0 auto;
