--- a/app/views/admin/schedules/edit.html.haml
+++ b/app/views/admin/schedules/edit.html.haml
@@ -1,4 +1,8 @@
 .adminSchedule-wrapper
   = render "shared/header-main"
   = render "shared/navbar"
-  
+  .editSchedule
+    %h4.editSchedule_index
+      スケジュール編集
+    .editSchedule_inner
+      = render "form-schedule"
