在庫管理のルーティング設定

--- a/app/views/admin/schedules/edit.html.haml
+++ b/app/views/admin/schedules/edit.html.haml
@@ -6,3 +6,5 @@
       スケジュール編集
     .editSchedule_inner
       = render "form-schedule"
+      =link_to admin_schedule_path, method: :delete, class: "btn btn-sm btn-dark" do
+        削除
