--- a/app/views/admins/show.html.haml
+++ b/app/views/admins/show.html.haml
@@ -20,13 +20,14 @@
               スケジュール管理
             %small.card-text
               スケジュールの追加、変更、削除
-      .card.adminMenu
-        %i.fas.fa-warehouse.fa-3x
-        .card-body
-          %h5.card-title
-            在庫管理
-          %small.card-text
-            チケット在庫の確認、設定
+      =link_to admin_stocks_path do
+        .card.adminMenu
+          %i.fas.fa-warehouse.fa-3x
+          .card-body
+            %h5.card-title
+              在庫管理
+            %small.card-text
+              チケット在庫の確認、設定
       .card.adminMenu
         %i.fas.fa-grip-horizontal.fa-3x
         .card-body
