stockのnewメソッドへのリンクつなぎ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 @import "modules/user-exist";
 @import "modules/schedules";
 @import "modules/admin/schedules";
-@import "modules/stocks";
+@import "modules/admin/stocks";
 @import "modules/managements";
 @import "modules/mypage";
 @import "modules/cards";
