--- a/app/views/admin/stocks/index.html.haml
+++ b/app/views/admin/stocks/index.html.haml
@@ -9,9 +9,9 @@
         = month_calendar(events: @schedules) do |date, scheudles|
           = date.day
           - scheudles.each do |schedule|
-            .matchBox
-              .matchBox_time
-                = schedule.start_time.strftime("%H:%M")
-              .matchBox_opponent
-                = "VS #{schedule.opponent}"
-              .matchBox_links
+            = link_to new_admin_stock_path do
+              .matchBox
+                .matchBox_time
+                  = schedule.start_time.strftime("%H:%M")
+                .matchBox_opponent
+                  = "VS #{schedule.opponent}"
