--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -1,60 +1,4 @@
-.scheduleIndex{
-  padding-top: 155px;
-  min-width: 450px;
-  max-width: 800px;
+.scheduleMain{
+  max-width: 980px;
   margin: 0 auto;
-  background-color: #ffffff;
-}
-
-.scheduleIndex-month{
-  margin: 10px 75px 10px;
-}
-
-.scheduleIndex-inner{
-  padding: 15px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.card{
-  width: 200px;
-  margin-bottom: 13px;
-}
-
-.cardDate{
-  font-size: 24px;
-}
-
-.cardTime{
-  font-size: 13px;
-}
-
-.cardOpponent{
-  font-size: 24px;
-  margin-bottom: 8px;
-}
-
-.cardLink{
-  font-size: 15px;
-}
-
-
-.scheduleNew{
-  padding-top: 155px;
-  min-width: 450px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-table{
-  width: 100%;
-}
-
-td{
-  width: 50%;
-}
-
-tr{
-height: 50px;
 }
