--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -1,19 +1,17 @@
 .schedule-wrapper
-  =render "shared/header-main"
-  .scheduleIndex
-    %h1.title
-      =l Time.current, format: :month
-    .scheduleIndex-month
-      - if can? :edit, current_user
-      .scheduleIndex-inner
-        - @schedules.each do |schedule|
-          .card
-            .card-body
-              .cardSchedule
-                .cardDate
-                  = l schedule.match_date, format: :day
-                .cardTime
-                  = l schedule.match_date, format: :time
-                = schedule.opponent
-              =link_to "", class:"btn btn-primary cardLink" do
-                チケット購入
+  = render "shared/header-main"
+  = render "shared/navbar"
+  .scheduleMain
+    .ScheduleMain_index
+      %h4 スケジュール
+    .ScheduleMain_month
+      .ScheduleMain_month-calendar
+        = month_calendar(events: @schedules) do |date, scheudles|
+          = date.day
+          - scheudles.each do |schedule|
+            =link_to schedule_path(schedule) do
+              .matchBox
+                .matchBox_time
+                  = schedule.start_time.strftime("%H:%M")
+                .matchBox_opponent
+                  = "VS #{schedule.opponent}"
