--- a/app/views/admin/schedules/edit.html.haml
+++ b/app/views/admin/schedules/edit.html.haml
@@ -5,6 +5,14 @@
     %h4.editSchedule_index
       スケジュール編集
     .editSchedule_inner
-      = render "form-schedule"
+      = form_with model: [:admin, @schedule], class:'scheduleForm' do |f|
+        .form-row
+          .form-group.col-6
+            %label 対戦日時
+            = f.datetime_field :start_time, class: "form-control"
+          .form-group.col-6
+            %label 対戦相手
+            = f.select :opponent,['チームA','チームB','チームC','チームD','チームE',], {prompt: '対戦相手を選んでください'}, {class:'form-control'}
+          = f.submit "作成"
       =link_to admin_schedule_path, method: :delete, class: "btn btn-sm btn-dark" do
         削除
