adminSchedule indexのレイアウト修正

--- a/app/assets/stylesheets/modules/admin/_schedules.scss
+++ b/app/assets/stylesheets/modules/admin/_schedules.scss
@@ -10,17 +10,17 @@
   text-align: right;
   margin-bottom: 10px;
 }
-.matchBox{
-  width: 100px;
-  margin: 0 auto;
-}
+
 .matchBox_time{
-  font-size: 14px;
+  font-size: 17px;
   margin-bottom: 5px;
 }
 .matchBox_opponent{
-  font-size: 17px;
-  margin-bottom: 10px;
+  font-size: 19px;
+  margin-bottom: 5px;
+}
+.matchBox_links-edit{
+  margin-right: 5px;
 }
 
 .newSchedule{
