在庫管理ページのレイアウト修正

--- a/app/views/admin/stocks/index.html.haml
+++ b/app/views/admin/stocks/index.html.haml
@@ -5,16 +5,16 @@
     .adminStock_index
       %h4 在庫管理
     .adminStock_month
-      .adminSchedule_month-link
-        =link_to new_admin_stock_path do
-          在庫追加
       .adminStock_month-calendar
         = month_calendar(events: @schedules) do |date, scheudles|
           = date.day
           - scheudles.each do |schedule|
-            = link_to admin_schedule_stocks_path(schedule) do
-              .matchBox
-                .matchBox_time
-                  = schedule.start_time.strftime("%H:%M")
-                .matchBox_opponent
-                  = "VS #{schedule.opponent}"
+            .matchBox
+              .matchBox_time
+                = schedule.start_time.strftime("%H:%M")
+              .matchBox_opponent
+                = "VS #{schedule.opponent}"
+              .matchBox_links
+                = link_to admin_schedule_stocks_path(schedule), class: "btn btn-sm btn-primary matchBox_links-edit " do
+                  編集
+
