--- a/app/views/admin/schedules/edit.html.haml
+++ b/app/views/admin/schedules/edit.html.haml
@@ -5,7 +5,7 @@
     %h4.editSchedule_index
       スケジュール編集
     .editSchedule_inner
-      = form_with model: [:admin, @schedule], class:'scheduleForm' do |f|
+      = form_with model: [:admin, @schedule_form], class:'scheduleForm' do |f|
         .form-row
           .form-group.col-6
             %label 対戦日時
@@ -13,4 +13,4 @@
           .form-group.col-6
             %label 対戦相手
             = f.select :opponent,['チームA','チームB','チームC','チームD','チームE',], {prompt: '対戦相手を選んでください'}, {class:'form-control'}
-          = f.submit "作成"
+          = f.submit "更新"
