スケジュール+在庫1つの作成、スケジュールのみの更新成功

--- a/app/views/admin/schedules/edit.html.haml
+++ b/app/views/admin/schedules/edit.html.haml
@@ -5,7 +5,7 @@
     %h4.editSchedule_index
       スケジュール編集
     .editSchedule_inner
-      = form_with model: [:admin, @schedule], class:'scheduleForm' do |f|
+      = form_with model: [:admin, @schedule_form], class:'scheduleForm' do |f|
         %table.table.table-borderless
           %thread
             %tr
